@@ -421,6 +421,7 @@ Contributors
 * Stefani Castellanos
 * Aliosha Padovani
 * Tom Readings
+* WinterComes
 
 Translators
 ===========
