@@ -1,3 +1,5 @@
+.. _custom_document_model:
+
 =====================
 Custom document model
 =====================
@@ -62,6 +64,8 @@ Then in your settings module:
 Referring to the document model
 ===============================
 
-.. module:: wagtail.documents.models
+.. module:: wagtail.documents
 
 .. autofunction:: get_document_model
+
+.. autofunction:: get_document_model_string
