@@ -1,10 +1,10 @@
 from django.utils.html import escape
 
 from wagtail.admin.rich_text.converters import editor_html
-from wagtail.documents.models import get_document_model
-
+from wagtail.documents import get_document_model
 
 # hallo.js / editor-html conversion
+
 
 class DocumentLinkHandler:
     @staticmethod
